@@ -35,3 +35,5 @@ OS: Windows 10
 ### Have you had any luck using git-annex before? (Sometimes we get tired of reading bug reports all day and a lil' positive end note does wonders)
 
 Yes, managing 30000 files, on operating systems other than Windows though...
+
+> [[fixed|done]] --[[Joey]]
