@@ -1,0 +1,8 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 1"""
+ date="2016-05-06T16:46:22Z"
+ content="""
+Thanks for reporting this. I can't fix all the too long path problems
+on windows currently, but I can fix this particular one at least.
+"""]]
